// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cosmos fixtures: Player:active 1`] = `
<div
  className="active"
>
  <strong
    className="name"
  >
    Hero
  </strong>
  <ul>
    <li>
      Stk: 
      199
    </li>
    <li>
      Bet: 
      1
    </li>
  </ul>
</div>
`;

exports[`Cosmos fixtures: Player:default 1`] = `
<div
  className="inactive"
>
  <strong
    className="name"
  >
    Player
  </strong>
  <ul>
    <li>
      Stk: 
      100
    </li>
    <li>
      Bet: 
      0
    </li>
  </ul>
</div>
`;

exports[`Cosmos fixtures: Player:folded 1`] = `
<div
  className="folded"
>
  <strong
    className="name"
  >
    Hero
  </strong>
  <ul>
    <li>
      Stk: 
      199
    </li>
    <li>
      Bet: 
      1
    </li>
  </ul>
</div>
`;

exports[`Cosmos fixtures: Player:inactive 1`] = `
<div
  className="inactive"
>
  <strong
    className="name"
  >
    Hero
  </strong>
  <ul>
    <li>
      Stk: 
      199
    </li>
    <li>
      Bet: 
      1
    </li>
  </ul>
</div>
`;
